--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     },
     "OWNER_USERNAME": {
       "description": "enter your Username without @",
-      "value": "KenalSayaaa"
+      "value": "thisisskyy"
     },
     "TG_BOT_TOKEN": {
       "description": "Your bot token, as a string."
@@ -46,7 +46,7 @@
     },
     "FTEXT": {
       "description": "the footer text that will be seen in the bot message, after the final edit",
-      "value": "By : @KenalSayaaa",
+      "value": "By : @thisisskyy",
       "required": false
     },
     "START_TEXT": {
@@ -81,7 +81,7 @@
   "formation": {
     "web": {
       "quantity": 1,
-      "size": "free"
+      "size": "eco"
     }
   },
   "stack": "heroku-20"
